language/move-lang/tests/move_check/typing/cast_invalid.exp
error: 

   ┌── tests/move_check/typing/cast_invalid.move:6:10 ───
   │
 6 │         (false as u8);
   │          ----- Found: 'bool'. But expected: 'u8', 'u64', 'u128'
   │          ^^^^^ Invalid argument to 'as'
   │

error: 

   ┌── tests/move_check/typing/cast_invalid.move:7:10 ───
   │
 7 │         (true as u128);
   │          ---- Found: 'bool'. But expected: 'u8', 'u64', 'u128'
   │          ^^^^ Invalid argument to 'as'
   │

error: 

   ┌── tests/move_check/typing/cast_invalid.move:9:10 ───
   │
 9 │         (() as u64);
   │          -- Found: '()'. But expected: 'u8', 'u64', 'u128'
   │          ^^ Invalid argument to 'as'
   │

error: 

    ┌── tests/move_check/typing/cast_invalid.move:10:10 ───
    │
 10 │         ((0, 1) as u8);
    │          ------ Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'
    │          ^^^^^^ Invalid argument to 'as'
    │

error: 

    ┌── tests/move_check/typing/cast_invalid.move:12:15 ───
    │
 12 │         (0 as bool);
    │               ---- Found: 'bool'. But expected: 'u8', 'u64', 'u128'
    │               ^^^^ Invalid argument to 'as'
    │

error: 

    ┌── tests/move_check/typing/cast_invalid.move:13:15 ───
    │
 13 │         (0 as address);
    │               ------- Found: 'address'. But expected: 'u8', 'u64', 'u128'
    │               ^^^^^^^ Invalid argument to 'as'
    │

error: 

    ┌── tests/move_check/typing/cast_invalid.move:14:21 ───
    │
 14 │         R{} = (0 as R);
    │                     - Found: '0x8675309::M::R'. But expected: 'u8', 'u64', 'u128'
    │                     ^ Invalid argument to 'as'
    │

error: 

    ┌── tests/move_check/typing/cast_invalid.move:15:15 ───
    │
 15 │         (0 as Cup<u8>);
    │               ------- Found: '0x8675309::M::Cup<u8>'. But expected: 'u8', 'u64', 'u128'
    │               ^^^^^^^ Invalid argument to 'as'
    │

error: 

    ┌── tests/move_check/typing/cast_invalid.move:16:15 ───
    │
 16 │         (0 as ());
    │               -- Found: '()'. But expected: 'u8', 'u64', 'u128'
    │               ^^ Invalid argument to 'as'
    │

error: 

    ┌── tests/move_check/typing/cast_invalid.move:17:15 ───
    │
 17 │         (0 as (u64, u8));
    │               --------- Found: '(u64, u8)'. But expected: 'u8', 'u64', 'u128'
    │               ^^^^^^^^^ Invalid argument to 'as'
    │

error: 

    ┌── tests/move_check/typing/cast_invalid.move:19:3 ───
    │
 19 │     (x"1234" as u64);
    │      ------- Found: 'vector<u8>'. But expected: 'u8', 'u64', 'u128'
    │      ^^^^^^^ Invalid argument to 'as'
    │

